added javascript file and update css and html file

--- a/index.html
+++ b/index.html
@@ -7,7 +7,20 @@
   <title>Pomodoro Clock</title>
 </head>
 <body>
-  <h1>Arup</h1>
+  <div class="container">
+    <div class="timer">25 : 00</div>
+    <h1 class="title">Click start for work time</h1>
+    <div class="buttons">
+      <button class="start-btn" style="--clr:#008000">Start</button>
+      <button class="pause-btn" style="--clr:#ff0000">Pause</button>
+      <button class="resume-btn" style="--clr:#5151db">Resume</button>
+      <button class="reset-btn" style="--clr:#ffa500">Reset</button>
+    </div>
+    <div class="pomoCountsDisplay">
+      <span class="count">0</span>
+      <p>Pomodoro Completed</p>
+    </div>
+  </div>
 
   <script src="script.js"></script>
 </body>
